@@ -40,4 +40,17 @@ public class Bar {
      ]]></code>
     <source-type>java 1.5</source-type>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+Patch 2075906: Add toString() to the rule UnnecessaryWrapperObjectCreation
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Bar {
+ void foo(boolean value) {
+  String b = Boolean.valueOf(value).toString();
+ }
+}
+     ]]></code>
+    </test-code>
 </test-data>
