@@ -416,6 +416,7 @@ Fixed bug 2050064 - False + SuspiciousOctalEscape with backslash literal
 Fixed bug 1556594 - Wonky detection of NullAssignment
 Fixed bug 1481051 - false + UnusedNullCheckInEquals (and other false positives too)
 Fixed bug 1943204 - Ant task: <ruleset> path should be relative to Ant basedir
+Fixed patch 2075906 - Add toString() to the rule UnnecessaryWrapperObjectCreation
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 bin and java14/bin scripts:
 	retroweaver version was not correct in java14/bin scripts
